src/objects/Escalations_and_Holds__c/Escalations_and_Holds__c.object-meta.xml
<CustomObject>
    <label>Escalations and Holds</label>
    <nameField>
        <displayFormat>EX-{0000}</displayFormat>
        <label>Escalations and Holds</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Escalations and Holds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>