src/objects/Escalations_and_Holds__c/fields/Automate__c.field-meta.xml
<CustomField>
    <fullName>Automate__c</fullName>
    <label>Automate</label>
    <length>50</length>
    <type>Text</type>
</CustomField>