src/objects/Escalations_and_Holds__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Exchange</fullName>
            </value>
            <value>
                <fullName>Internal Escalations</fullName>
            </value>
            <value>
                <fullName>OEM Quotes Orders</fullName>
            </value>
            <value>
                <fullName>Orders</fullName>
            </value>
            <value>
                <fullName>Quotes</fullName>
            </value>
            <value>
                <fullName>Repair &amp; Overhaul</fullName>
            </value>
            <value>
                <fullName>Returns</fullName>
            </value>
            <value>
                <fullName>ReturnsPRO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>