src/objects/Escalations_and_Holds__c/fields/Reason_for_Hold__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Hold__c</fullName>
    <label>Reason for Hold</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>2020 Contract Pricing-Contract Escalation</fullName>
            </value>
            <value>
                <fullName>2020 Contract Pricing-SO Review</fullName>
            </value>
            <value>
                <fullName>777 Expedite</fullName>
            </value>
            <value>
                <fullName>8130/EASA/CAAC/CERTIFICATION CORRECTION</fullName>
            </value>
            <value>
                <fullName>8130/EASA/CAAC/CERTIFICATION MISSING</fullName>
            </value>
            <value>
                <fullName>ACAT NEEDED</fullName>
            </value>
            <value>
                <fullName>ACCOUNT BLOCK STATUS</fullName>
            </value>
            <value>
                <fullName>ACCOUNT CHANGE: BILL TO</fullName>
            </value>
            <value>
                <fullName>ACCOUNT CHANGE: CARRIER</fullName>
            </value>
            <value>
                <fullName>ACCOUNT CHANGE: END USER DETAILS</fullName>
            </value>
            <value>
                <fullName>ACCOUNT CHANGE: EXTEND SALES OG</fullName>
            </value>
            <value>
                <fullName>ACCOUNT CHANGE: NAME/ADDRESS</fullName>
            </value>
            <value>
                <fullName>ACCOUNT CHANGE: SHIP TO</fullName>
            </value>
            <value>
                <fullName>ACES ISSUE</fullName>
            </value>
            <value>
                <fullName>ACES ISSUES</fullName>
            </value>
            <value>
                <fullName>ACN#</fullName>
            </value>
            <value>
                <fullName>ADD CUSTOMER SOLD TO/SALES OFFICE</fullName>
            </value>
            <value>
                <fullName>ADD PART NUMBER TO CONTRACT</fullName>
            </value>
            <value>
                <fullName>AIRCRAFT DETAILS</fullName>
            </value>
            <value>
                <fullName>AMENDED PO - CONTRACT PRICING</fullName>
            </value>
            <value>
                <fullName>AMENDED PO - HONEYWELL ADDRESS</fullName>
            </value>
            <value>
                <fullName>AMENDED PO - LIST PRICING</fullName>
            </value>
            <value>
                <fullName>AMENDED PO- LIST PRICING</fullName>
            </value>
            <value>
                <fullName>AMENDED PO - MINIMUM ORDER QUANTITY</fullName>
            </value>
            <value>
                <fullName>AMENDED PO - MTO PRICING</fullName>
            </value>
            <value>
                <fullName>AMENDED PO - PART NUMBER</fullName>
            </value>
            <value>
                <fullName>AMENDED PO - SERIAL NUMBER</fullName>
            </value>
            <value>
                <fullName>AMENDED PO - TERMS AND CONDITIONS</fullName>
            </value>
            <value>
                <fullName>APM ORDER REVIEW</fullName>
            </value>
            <value>
                <fullName>APM PN ERROR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>