src/objects/Escalations_and_Holds__c/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <label>Sub Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>S&amp;C</fullName>
            </value>
            <value>
                <fullName>BUSINESS HOLD</fullName>
            </value>
            <value>
                <fullName>CONTRACT ADMIN HOLD</fullName>
            </value>
            <value>
                <fullName>CSO HOLD</fullName>
            </value>
            <value>
                <fullName>CUSTOMER HOLD</fullName>
            </value>
            <value>
                <fullName>CUSTOMER MASTER HOLD</fullName>
            </value>
            <value>
                <fullName>ENGINEERING HOLD</fullName>
            </value>
            <value>
                <fullName>EXPORT HOLD</fullName>
            </value>
            <value>
                <fullName>FINANCE HOLD</fullName>
            </value>
            <value>
                <fullName>IMPORT HOLD</fullName>
            </value>
            <value>
                <fullName>INTEGRATED SUPPLY CHAIN HOLD</fullName>
            </value>
            <value>
                <fullName>PMO HOLD</fullName>
            </value>
            <value>
                <fullName>QUALITY HOLD</fullName>
            </value>
            <value>
                <fullName>SAP/IT SUPPORT HOLD</fullName>
            </value>
            <value>
                <fullName>WARRANTY HOLD</fullName>
            </value>
            <value>
                <fullName>NULL</fullName>
            </value>
            <value>
                <fullName>PRICING HOLD</fullName>
            </value>
            <value>
                <fullName>CONTRACT MANAGER HOLD</fullName>
            </value>
            <value>
                <fullName>MTO HOLD</fullName>
            </value>
            <value>
                <fullName>SPEX C&amp;PS</fullName>
            </value>
            <value>
                <fullName>GBE HOLD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>