src/objects/Escalations_and_Holds__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sub_Status__c</columns>
    <columns>Reason_for_Hold__c</columns>
    <columns>Case_Type__c</columns>
    <columns>Automate__c</columns>
    <columns>Level_1_POC__c</columns>
    <columns>Lev2_Followup_Calendar_Days__c</columns>
    <columns>Level_2_POC__c</columns>
    <columns>Lev3_Followup_Calendar_Days__c</columns>
    <columns>Level_3_POC__c</columns>
    <columns>Lev4_Followup_Calendar_Days__c</columns>
    <columns>Level_4_POC__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>